[tool.poetry]
name = "python-asynchronous-programming"
version = "0.1.0"
description = "Pythonで非同期サンプルリポジトリ"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
